# src/routes.ts
@@ -1,8 +1,13 @@
 import express from 'express';
+import multer from 'multer';
+
+import uploadConfig from '../config/upload';
+const upload = multer(uploadConfig);
 
 import UserController from './controllers/UserController';
 import SessionController from './controllers/SessionController';
 import ChatController from './controllers/ChatController';
+import UploadController from './controllers/UploadController';
 
 export const routes = express.Router();
 
@@ -16,4 +21,4 @@ routes.delete('/users/delete/:id', UserController.delete); // Deletar usuários
 routes.post('/chat/send', ChatController.create); // Enviar mensagem
 routes.get('/chat/list', ChatController.list); // Listar mensagens
 
-routes.get('/teste/gamers', ChatController.get); // Enviar mensagem
+routes.post('/upload', upload.single('image'), UploadController.upload)
